CSS updated. scrollbar visibility error corrected.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -131,6 +131,7 @@ input,
 optgroup,
 select,
 textarea {
+  outline-style: none;
   font: inherit;
   margin: 0;
 }
@@ -459,18 +460,18 @@ section#love-msg {
   border-style: none;
 }
 
-.search-container {
+.filter-search-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.search-container .search-bar {
+.filter-search-container .search-bar {
   margin: 15px 0px;
   position: relative;
 }
 
-.search-container .search-bar #search-input {
+.filter-search-container .search-bar #search-input {
   border-style: none;
   height: 52px;
   width: 70vw;
@@ -478,11 +479,11 @@ section#love-msg {
   border-radius: 45px;
 }
 
-.search-container .search-bar #search-input:hover {
+.filter-search-container .search-bar #search-input:hover {
   box-shadow: 2px 2px 10px #463b3b;
 }
 
-.search-container .search-bar .search-button {
+.filter-search-container .search-bar .search-button {
   background-color: #f3f3f3;
   color: #0c0c0c;
   position: absolute;
@@ -493,48 +494,54 @@ section#love-msg {
   border-radius: 0px 45px 45px 0px;
 }
 
-.search-container .search-bar .search-button:hover {
+.filter-search-container .search-bar .search-button:hover {
   box-shadow: 2px 2px 10px #463b3b;
 }
 
-.search-container .search-filter {
+.filter-search-container .filter-container {
   position: absolute;
   top: 22px;
   z-index: -1;
-  background-color: white;
-  height: 0px;
+  background-color: #f3f3f3;
+  height: fit-content;
   width: 70vw;
-  overflow-y: auto;
-  overflow-x: hidden;
+  visibility: hidden;
   transition: ease-out 0.1s;
 }
 
-.search-container .expand-filter {
-  transition: ease-in 0.2s;
-  height: 200px;
+.filter-search-container .filter-container .filter {
+  margin-top: 35px;
+  background-color: white;
+  height: 0px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-.search-container .filter-table {
-  margin-top: 25px;
+.filter-search-container .filter-container .filter .filter-table {
   color: black;
   min-width: 70vw;
   font-size: 1.3em;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-.search-container .filter-table tbody tr {
+.filter-search-container .filter-container .filter .filter-table tr {
   border-bottom: 1px solid #dddddd;
 }
 
-.search-container .filter-table tbody tr:nth-of-type(even) {
+.filter-search-container .filter-container .filter .filter-table tr:nth-of-type(even) {
   background-color: #f3f3f3;
 }
 
-.search-container .filter-table tbody tr:hover {
+.filter-search-container .filter-container .filter .filter-table tr:hover {
   box-shadow: 0 0 10px black;
 }
 
-.search-container .filter-table td {
+.filter-search-container .filter-container .filter .filter-table td {
   padding: 12px 35px;
+}
+
+.filter-search-container .filter-container .expand-filter {
+  transition: ease-in 0.2s;
+  height: 200px;
 }
 /*# sourceMappingURL=app.css.map */
